# videoscripts

./: .gitignore  README.md  combine_snippets.py  pyproject.toml  requirements.txt  todo_nodes.md  todo_notes.md
src/video_script_tool/: __init__.py  capture_slides.py  cli.py  core.py  gui.py  md_processor.py  util.py
